# extract-issuer-from-borsa

./: .gitignore  Dashboard.xlsx  README.md  a.sql  analyze_new_unds.py  dashboard.py  isin_info.csv  issuers.csv  main.py  old.sql  parse_ced.py  prova.html  pyproject.toml  ref.txt  run_dashboard.bat  script.py  type_and_subtype.csv  und_mapping.csv  underlyings.csv  xd.sql
