[project]
name = "extract-issuer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "lxml>=5.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "tqdm>=4.67.1",
    "xlsxwriter>=3.2.3",
]
